--- a/src/application/view/Root.fxml
+++ b/src/application/view/Root.fxml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<BorderPane fx:id="root" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.Root">
+   <bottom>
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="stepButton" mnemonicParsing="false" onAction="#singleEpoch" text="Button" />
+            <Button fx:id="startButton" mnemonicParsing="false" onAction="#start" text="Button" />
+            <Button fx:id="stopButton" mnemonicParsing="false" onAction="#stop" text="Button" />
+         </children>
+      </HBox>
+   </bottom>
 </BorderPane>
