--- a/src/application/view/Root.fxml
+++ b/src/application/view/Root.fxml
@@ -3,14 +3,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="root" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.Root">
    <bottom>
-      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="20.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="stepButton" mnemonicParsing="false" onAction="#singleEpoch" text="Button" />
-            <Button fx:id="startButton" mnemonicParsing="false" onAction="#start" text="Button" />
-            <Button fx:id="stopButton" mnemonicParsing="false" onAction="#stop" text="Button" />
+            <Button fx:id="startButton" mnemonicParsing="false" onAction="#start" prefHeight="23.0" prefWidth="149.0" text="Start">
+               <font>
+                  <Font name="Corbel Bold" size="15.0" />
+               </font>
+            </Button>
          </children>
       </HBox>
    </bottom>
